k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cipherflow-worker
  labels:
    app: cipherflow-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cipherflow-worker
  template:
    metadata:
      labels:
        app: cipherflow-worker
    spec:
      # DEVSECOPS FIX: Attach the restricted ServiceAccount
      serviceAccountName: cipherflow-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: worker
        image: cipherflow-worker:1.0
        imagePullPolicy: Never
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"     # Workers do cryptography, so we give them a slightly higher CPU cap
            memory: "256Mi"
